slide/src/test/ui/error/pattern/any_pat_in_expr.slide
===in
1 + _any
===in

~~~stdout
~~~stdout

~~~stderr
error[P0004]: Patterns cannot be used in an expression
  |
1 | 1 + _any 
  |     ^^^^ unexpected pattern
  |     ---- help: use a variable: `any`
  |
~~~stderr

~~~exitcode
1
~~~exitcode
